--- a/nhahang/src/main/java/UII/MainFrame.form
+++ b/nhahang/src/main/java/UII/MainFrame.form
@@ -772,7 +772,7 @@
                         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                           <Font name="Serif" size="18" style="0"/>
                         </Property>
-                        <Property name="text" type="java.lang.String" value="NGON NH&#x1af; &#x1ede; NH&#xc0;"/>
+                        <Property name="text" type="java.lang.String" value="NGON NH&#x1af; &#x1ede; NH&#xc0;."/>
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JLabel" name="jLabel37">
